@@ -30,6 +30,8 @@ Version vNext
 	Bug fixes:
 		-[Core/LifetimeScoping/Web/Wcf] Instances were disposed in wrong order. (work item 20100)
 		-[Core] Not all created registrations ended up in the debugger diagnostics view (work item 19954).
+		-[Core] Visual Basic debugger now displays debug information. The experience still sucks for VB
+		 developers, but at least they can view the information now. (work item 20271)
 	
 				
 Version 2.3.5 (v2.3.5 RTM) 2013-09-02
